# zexporta

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  example.env  makefile  pyproject.toml  pytest.ini  ruff.toml
libs/: .cz.toml  pyproject.toml
libs/src/clients/: __init__.py  abstract.py  custom_types.py  exceptions.py
libs/src/clients/btc/: __init__.py  client.py  custom_types.py  exceptions.py
libs/src/clients/btc/rpc/: ankr.py  data_models.py  mempol_testnet4.py
libs/src/clients/evm/: __init__.py  abi.py  client.py  custom_types.py  exceptions.py  transfer_decoder.py
libs/src/health_check/: __init__.py  abstract.py
libs/tests/: health_check_test.py
test/: conftest.py  mock.py  test_explorer.py
tests/: conftest.py  mock.py
zex_deposit/: config.py  custom_types.py
zex_deposit/clients/: btc.py
zex_deposit/db/: address.py  chain.py  config.py  database.py  models.py  sample.json  token.py  transfer.py  withdraw.py
zex_deposit/deposit/: api.py  config.py  finalizer.py  observer.py  sa.py  vault_depositor.py
zex_deposit/deposit/networks/: __init__.py
zex_deposit/deposit/networks_finalizers/: btc_finalizer.py  evm_finalizer.py
zex_deposit/monitoring_bot/: config.py  custom_types.py  deposit.py  main.py  withdraw.py
zex_deposit/sa/: api.py  config.py  depositor.py  finalizer.py  observer.py  sa.py  vault_depositor.py  withdraw_sa.py  withdrawer.py
zex_deposit/utils/: _dev_node_info.py  _dumy_node_info.py  abi.py  btc.py  btc_observer.py  decode_error.py  dkg.py  encode_deposit.py  encoder.py  evm_observer.py  logger.py  node_info.py  observer.py  redis_interface.py  transfer_decoder.py  web3.py  zex_api.py  zex_deposit.py
zex_deposit/utils/db/: address.py  database.py
zex_deposit/validator/: config.py  deposit.py  finalizer.py  node.py  node_data_manager.py  node_validator.py  observer.py  transfer.py  user_transfer.py  withdraw.py
zex_deposit/withdraw/: config.py  observer.py  sa.py
zexporta/: chain_config.py  config.py  custom_types.py  explorer.py  settings.py
zexporta/bots/: custom_types.py
zexporta/bots/monitoring/: config.py  deposit.py  main.py  withdraw.py
zexporta/bots/monitoring_bot/: config.py  deposit.py  withdraw.py
zexporta/bots/transfer_test_token/: config.py  database.py  main.py
zexporta/bots/transfer_test_token_bot/: main.py
zexporta/bots/utils/: deposit.py
zexporta/clients/: __init__.py  abstract.py  btc.py  evm.py  exceptions.py
zexporta/db/: address.py  chain.py  collections.py  config.py  db.py  deposit.py  sa_withdraw.py  token.py  transfer.py  utxo.py  withdraw.py
zexporta/deposit/: api.py  config.py  finalizer.py  observer.py  sa.py  vault_depositor.py
zexporta/deposit/finalizers/: __init__.py  btc.py  btc_finalizer.py  evm_finalizer.py  main.py
zexporta/deposit/networks_finalizers/: btc_finalizer.py  evm_finalizer.py
zexporta/monitoring_bot/: config.py  custom_types.py  deposit.py  main.py  withdraw.py
zexporta/transfer_test_token_bot/: config.py  custom_types.py  database.py  main.py
zexporta/utils/: _dev_node_info.py  _dummy_node_info.py  abi.py  btc.py  btc_observer.py  decode_error.py  dkg.py  encoder.py  evm_observer.py  logger.py  node_info.py  observer.py  transfer_decoder.py  web3.py  zbtc_utils.py  zex_api.py
zexporta/validator/: config.py  deposit.py  node.py  node_data_manager.py  node_validator.py  withdraw.py
zexporta/withdraw/: btc_utils.py  config.py  observer.py  sa.py
