[project]
name = "zexporta"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi~=0.115.7",
    "gunicorn~=23.0.0",
    "httpx>=0.28.1,<1.0.0",
    "libs",
    "pydantic~=2.10.6",
    "pyfrost",
    "pymongo~=4.10.1",
    "python-dotenv~=1.0.1",
    "redis[hiredis]~=5.2.0",
    "sentry-sdk~=2.20",
    "web3~=6.19",
]

[tool.uv.sources]
pyfrost = { git = "https://github.com/zellular-xyz/pyfrost.git" }
libs = { workspace = true }

[tool.uv.workspace]
members = ["libs"]

[dependency-groups]
dev = ["pre-commit~=4.0.1", "pytest~=8.3.3"]
[tool.ruff.lint.per-file-ignores]
"config.py" = ["F401"]
