[project]
name = "zexporta"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bitcoin-utils~=0.6.8",
    "fastapi~=0.115.7",
    "gunicorn~=23.0.0",
    "httpx>=0.28.1,<1.0.0",
    "libs",
    "pydantic~=2.10.6",
    "pyfrost",
    "pymongo~=4.10.1",
    "python-dotenv~=1.0.1",
    "redis[hiredis]~=5.2.0",
    "sentry-sdk~=2.20",
    "web3~=6.19",
]

[tool.uv.sources]
pyfrost = { git = "https://github.com/zellular-xyz/pyfrost.git" }
libs = { workspace = true }

[tool.uv.workspace]
members = ["libs"]


[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_scheme = "pep440"
version_provider = "pep621"
update_changelog_on_bump = true
major_version_zero = true

[dependency-groups]
dev = [
    "commitizen>=4.4.1",
    "pre-commit~=4.0.1",
    "pyright>=1.1.394",
    "pytest~=8.3.3",
    "pytest-asyncio>=0.25.3",
    "pytest-dotenv~=0.5.2",
    "ruff>=0.9.6",
    "testcontainers[mongodb]>=4.9.1",
]
[tool.ruff]
exclude = [
    ".git",
    "__pycache__",
    "setup.py",
    "build",
    "dist",
    "releases",
    "tools",
    ".venv",
    ".mypy_cache",
    ".pytest_cache",
    ".vscode",
    ".github",
]
line-length = 120
indent-width = 4


[tool.ruff.lint]
select = [
    "E", # pycodestyle errors
    "F", # pyflakes errors
    "W", # pycodestyle warnings
    "C", # mccabe complexity checker
    "B", # bugbear best practices checker
    "T", # mypy type errors
    "B", # flake8-bugbear best practices checker
    "I", # isort
]
ignore = [
    "C408", # unnecessary-collection-call (https://docs.astral.sh/ruff/rules/unnecessary-collection-call/)
    "B905", # zip-without-explicit-strict (https://docs.astral.sh/ruff/rules/zip-without-explicit-strict/)
]


# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"] # unused import
"_init.py" = ["F401", "F403"]    # unused import
"config.py" = ["F401"]

[tool.ruff.lint.mccabe]
max-complexity = 15 # TODO: we should reduce this since it will cause non-readable code

[tool.ruff.lint.pydocstyle]
convention = "google"

# FIXME: the warning which has been set should remove but since project has these problems ignore them
[tool.pyright]
reportIncompatibleMethodOverride = "warning"
pythonVersion = "3.12"
typeCheckingMode = "standard"
